# GAMES101-homework

./: .gitignore  LICENSE  README.md
Assignment1/: main.cpp
Assignment2/: README.md  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: README.md  Texture.hpp  launch.vs.json  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/: README.md  main.cpp
Assignment5/: CMakeLists.txt  README.md  Renderer.cpp  Triangle.hpp
Assignment6/: BVH.cpp  Bounds3.hpp  README.md  Renderer.cpp  Triangle.hpp  main.cpp
Assignment7/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Material.hpp  README.md  Renderer.cpp  Scene.cpp  Scene.hpp  Triangle.hpp  launch.vs.json  main.cpp
Assignment8/: README.md
Assignment8/CGL/lib/: CGL.lib  glew.lib  glfw3.lib
Assignment8/CGL/lib/pkgconfig/: glfw3.pc
Assignment8/CGL/src/: osdtext.h  quaternion.h  viewer.cpp
Assignment8/src/: application.cpp  application.h  main.cpp  rope.cpp
